--- a/src/components/fruit/Fruit.css
+++ b/src/components/fruit/Fruit.css
@@ -1,9 +1,12 @@
-.snake{
-    height: var(--snake-size);
-    width: var(--snake-size);
+.fruit{
+    height: var(--fruit-size);
+    width: var(--fruit-size);
     /*border: 50px solid black;*/
     /*background-color: var(--color-snake);*/
     /*top: 10px;*/
     /*color: antiquewhite;*/
     position: absolute;
+
+
+    background-color: blueviolet;
 }
